Proyecto optimizado con imágenes .avif .webp

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                     <div class="input">
                         <input type="text" placeholder="Tu Email">
                     </div>
-                    <input type="submit" value="inscribirme">
+                    <input type="submit" value="Inscribirme">
                 </form>
             </div>
         </div>
@@ -102,5 +102,6 @@
     <footer class="footer">
         <p>Todos los derechos reservados</p>
     </footer>
+    <script src="/js/imagenes.js"></script>
 </body>
 </html>
